# Algorithms

./: CMakeLists.txt  README.md  maximum_sum_rectangle_in_a_2D_matrix.cpp
Backtracking/: hamiltonian-cycle.cpp  m-coloring-problem-2.cpp  m-coloring-problem-3.cpp  m-coloring-problem.cpp  n-queen-problem-2.cpp  n-queen-problem.cpp  rat-in-a-maze.cpp  subset-sum-2.cpp  subset-sum.cpp  sudoku.cpp  the-knights-tour-problem.cpp  tug-of-war.cpp  write-a-c-program-to-print-all-permutations-of-a-given-string.cpp
Bit Algorithms/: a-boolean-array-puzzle.cpp  add-1-to-a-given-number-2.cpp  add-1-to-a-given-number.cpp  add-two-numbers-without-using-arithmetic-operators.cpp  binary-representation-of-a-given-number-2.cpp  binary-representation-of-a-given-number-3.cpp  binary-representation-of-a-given-number.cpp  brian-kernighans-algorithm.cpp  check-binary-representation-number-palindrome.cpp  check-for-integer-overflow-2.cpp  check-for-integer-overflow.cpp  compute-modulus-division-by-a-power-of-2-number.cpp  compute-the-integer-absolute-value-abs-without-branching.cpp  compute-the-minimum-or-maximum-max-of-two-integers-without-branching-2.cpp  compute-the-minimum-or-maximum-max-of-two-integers-without-branching.cpp  count-number-of-bits-to-be-flipped-to-convert-a-to-b.cpp  count-set-bits-in-an-integer-2.cpp  count-set-bits-in-an-integer.cpp  count-total-set-bits-in-all-numbers-from-1-to-n-2.cpp  count-total-set-bits-in-all-numbers-from-1-to-n-3.cpp  count-total-set-bits-in-all-numbers-from-1-to-n.cpp  detect-if-two-integers-have-opposite-signs.cpp  (+52 more)
(+319 files in other folders)
